--- a/public/index.html
+++ b/public/index.html
@@ -161,28 +161,28 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <input type="text" class="inputmessage" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name.">
+                                                <input type="text" class="inputmessage" placeholder="Your Name " id="name" required="" data-validation-required-message="Please enter your name.">
                                                 <p class="help-block text-danger"></p>
                                             </div>
                                             <div class="form-group">
-                                                <input type="email" class="inputmessage" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address.">
+                                                <input type="email" class="inputmessage" placeholder="Your Email " id="email" required="" data-validation-required-message="Please enter your email address.">
                                                 <p class="help-block text-danger"></p>
                                             </div>
                                             <div class="form-group">
-                                                <input type="tel" class="inputmessage" placeholder="Your Phone *" id="phone" required="" data-validation-required-message="Please enter your phone number.">
+                                                <input type="tel" class="inputmessage" placeholder="Your Phone " id="phone" required="" data-validation-required-message="Please enter your phone number.">
                                                 <p class="help-block text-danger"></p>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <textarea class="inputmessage" placeholder="Your Message *" id="message" required="" data-validation-required-message="Please enter a message."></textarea>
+                                                <textarea class="inputmessage" placeholder="Your Message " id="message" required="" data-validation-required-message="Please enter a message."></textarea>
                                                 <p class="help-block text-danger"></p>
                                             </div>
                                         </div>
                                         <div class="clearfix"></div>
                                         <div class="col-lg-12 text-center">
                                             <div id="success"></div>
-                                            <a href="#" target="_blank" style="display:inline-block; background:#333; color:#FFF; padding:5px 10px 5px 10px; margin:15px 0 0 0; text-decoration:none" class="submit" type="submit">Send the email</a>
+                                            <a href="#" target="_blank" style="display:inline-block; background:blanchedalmond; color: peru; padding:5px 10px 5px 10px; margin:55px 0 0 0; text-decoration:none" class="submit" type="submit">Send email</a>
                                         </div>
                                     </div>
                                 </form>
@@ -203,6 +203,7 @@
                     </div>
                 </div>
             </section>
+            &copy; 2017 <i>Blanche d'Almond</i>
     </footer>
     <!--/.Footer-->
     <script>
