--- a/public/parentprof.html
+++ b/public/parentprof.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Peachers for Parents and Teachers!</title>
@@ -7,139 +8,158 @@
 
 
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+            crossorigin="anonymous">
+            <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+                crossorigin="anonymous"></script>
+
+                <!-- Latest compiled and minified JavaScript -->
+                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
                     crossorigin="anonymous"></script>
-                    
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="styles.css">
-<script src="fejs.js"></script>
-
-
+                    <link rel="stylesheet" href="/styles.css">
+                    <script src="/fejs.js"></script>
+</head>
 <!--<div class="container">
   <!-- Topper w/ logo -->
-  <div class="row hidden-xs topper">
+<div class="row hidden-xs topper">
     <div class="col-xs-7 col-sm-7">
-      <a href="/index.html"><img am-TopLogo alt="SECUREVIEW"  src="/images/peachertrans.png" class="img-responsive"></a>
+        <a href="/"><img am-TopLogo alt="SECUREVIEW" src=" /images/peachertrans.png" class="img-responsive"></a>
     </div>
     <div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-0 text-right ">
     </div>
-  </div> <!-- End Topper -->
-  <!-- Navigation -->
-  <div class="row">
+</div>
+<!-- End Topper -->
+<!-- Navigation -->
+<div class="row">
     <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand visible-xs-inline-block nav-logo" href="/"><img src="/images/peachertrans.png" class="img-responsive" alt=""></a>
+                <a class="navbar-brand visible-xs-inline-block nav-logo" href="/"><img src="/images/peachertrans.png" class="img-responsive" alt=""></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav js-nav-add-active-class">
+                    <li><a href="/index.html">Home</a></li>
+                    <li class="active"><a href="/parentprof.html">Profile</a></li>
+                    <li><a href="/class.html">Class</a></li>
+                    <li><a href="/settings.html">Settings</a></li>
+                </ul>
+                </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right hidden-xs">
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav js-nav-add-active-class">
-            <li><a href="./index.html">Home</a></li>
-            <li class="active"><a href="./parentprof.html">Profile</a></li>
-            <li><a href="./class.html">Class</a></li>
-            <li><a href="./settings.html">Settings</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right hidden-xs">
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div>
     </nav>
-  </div>
 </div>
-</head>
+</div>
 
 
-<body><center>
-<div id='mainDiv' class='divvy'> Yo ! This is where some shit will go, bro! </div>
 
-
+<body>
     <center>
-    <!--<img src="./images/peachertrans.png" width="75%" height="75%"><br>-->
-    <img src="./images/peachErty.png" width="50%" height="50%">
-    <br>
+        <div id='mainDiv' class='divvy'> Yo !!!! This is where some shit will go, bro! </div>
+
+
+        <center>
+            <!--<img src="./images/peachertrans.png" width="75%" height="75%"><br>-->
+            <img src="/images/peachErty.png" width="50%" height="50%">
+            <br>
 
 
 
-</center>
-<!--Footer-->
+        </center>
+        <!--Footer-->
         <footer class="page-footer center-on-small-only primary-color-dark" id="footy">
-        <div>
-            <section id="contact" style="">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="./images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
-                        <div class="col-md-5" style="margin-bottom: 20px;">
-                            <h1 style="color:#fff;">Have a comment? Please share!</h1><br><br>
-                        </div>
+            <div>
+                <section id="contact" style="">
+                    <div class="container-fluid">
                         <div class="row">
-
-                            <div class="col-md-8">
-                                <form name="sentMessage" id="contactForm" novalidate="">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <input type="text" class="inputmessage" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name.">
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="email" class="inputmessage" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address.">
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                            <div class="form-group">
-                                                <input type="tel" class="inputmessage" placeholder="Your Phone *" id="phone" required="" data-validation-required-message="Please enter your phone number.">
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <textarea class="inputmessage" placeholder="Your Message *" id="message" required="" data-validation-required-message="Please enter a message."></textarea>
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                        </div>
-                                        <div class="clearfix"></div>
-                                        <div class="col-lg-12 text-center">
-                                            <div id="success"></div>
-                                            <a href="#" target="_blank" style="display:inline-block; background:#333; color:#FFF; padding:5px 10px 5px 10px; margin:15px 0 0 0; text-decoration:none" class="submit" type="submit">Send the email</a>
-                                        </div>
-                                    </div>
-                                </form>
+                            <div class="picture" style="margin-bottom: 20px" style="margin-left: 20px"><img src="/images/peachertrans.png" width="30%" height="30%" style="float: left"></div>
+                            <div class="col-md-5" style="margin-bottom: 20px;">
+                                <h1 style="color:#fff;">Have a comment? Please share!</h1><br><br>
                             </div>
-                            <div class="col-md-4">
-                                <p style="color:#fff;">
-                                    <strong><i class="fa fa-map-marker"></i> Address</strong><br> 1600 Range St. Arapahoe
-                                    Ave. Boulder, CO 80303
-                                </p>
-                                <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Phone Number</strong><br> 1-800-CODECRAFT extension:
-                                    ERTY</p>
-                                <p style="color:#fff;">
-                                    <strong><i class="fa fa-envelope"></i>  Email Address</strong><br> info@peacher.com
-                                </p>
-                                <p></p>
+                            <div class="row">
+
+                                <div class="col-md-8">
+                                    <form name="sentMessage" id="contactForm" novalidate="">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <input type="text" class="inputmessage" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name.">
+                                                    <p class="help-block text-danger"></p>
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="email" class="inputmessage" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address.">
+                                                    <p class="help-block text-danger"></p>
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="tel" class="inputmessage" placeholder="Your Phone *" id="phone" required="" data-validation-required-message="Please enter your phone number.">
+                                                    <p class="help-block text-danger"></p>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <textarea class="inputmessage" placeholder="Your Message *" id="message" required="" data-validation-required-message="Please enter a message."></textarea>
+                                                    <p class="help-block text-danger"></p>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                            <div class="col-lg-12 text-center">
+                                                <div id="success"></div>
+                                                <a href="#" target="_blank" style="display:inline-block; background:#333; color:#FFF; padding:5px 10px 5px 10px; margin:15px 0 0 0; text-decoration:none"
+                                                    class="submit" type="submit">Send the email</a>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="col-md-4">
+                                    <p style="color:#fff;">
+                                        <strong><i class="fa fa-map-marker"></i> Address</strong><br> 1600 Range St. Arapahoe
+                                        Ave. Boulder, CO 80303
+                                    </p>
+                                    <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Phone Number</strong><br> 1-800-CODECRAFT extension:
+                                        ERTY
+                                    </p>
+                                    <p style="color:#fff;">
+                                        <strong><i class="fa fa-envelope"></i>  Email Address</strong><br> info@peacher.com
+                                    </p>
+                                    <p></p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
-    </footer>
-    <script>
+                </section>
+        </footer>
+        <script>
+
     $.get('/api/student', function (res){
        var data = JSON.parse(res);
+       console.log(data);
+       console.log(data[0].students[0])
+       $('.divvy').append('<p>' + data[0].students[0].student);
     });
+
+
+
+
+
+
+
+
     </script>
 </body>
 </html>
